--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <meta property="og:image" content="/image/yo.jpg">
   <meta property="og:image:alt" content="fotografia de yeisonhenaoo">
 
-  <link rel="alternate" href="https://yeisonhenaoo.dev/en" hreflang="en-GB"> <!--Para mencionar el alternativo en este caso de ingles de reino unido-->
+  <link rel="alternate" href="https://yeisonhenaoo.dev/en" hreflang="en-GB">
+  <!--Para mencionar el alternativo en este caso de ingles de reino unido-->
   <link rel="canonical" href="https://yeisonhenaoo.dev"> <!--Para definir la pagina principal-->
 
   <style>
@@ -28,19 +29,172 @@
 </head>
 
 <body>
-  <h1>Portfolio de @yeisonhenaoo 🖥️</h1>
 
-  <p>+5 años siendo <strong>desarrollador de software</strong> y un apasionado por el mundo tecnologico</p>
+  <header>
+    <h1>Portfolio de @yeisonhenaoo 🖥️</h1>
+  </header>
 
-  <h2>Experiencia</h2>
-  <ul>
-    <li>
-      <p>Coopebombas (2020 - actualidad)</p>
-    </li>
-  </ul>
+  <nav>
+    <a href="#experiencia">Experiencia</a>
+    <a href="#proyectos">Proyectos</a>
+    <a href="https:google.com.co" target="_blank" rel="noreferrer">Google</a>
+  </nav>
 
-  <img src="/images/yo.jpg" alt="Una fotografia de Yeison de presentación" title="Foto de yeison" width="250"
-    height="250" id="photo-image" hidden>
+  <dialog id="modal">
+    <h1>Sabias que puedes abrir una modal asi</h1>
+    <p>Y es nativo</p>
+    <button id="close">Cerrar</button>
+  </dialog>
+
+  <button>Ver mas información</button>
+
+  <main>
+    <p>+5 años siendo <strong>desarrollador de software</strong> y un apasionado por el mundo tecnologico</p>
+
+    <h2 id="experiencia">Experiencia</h2>
+    <ul>
+      <li>
+        <p>Coopebombas (2020 - actualidad)</p>
+      </li>
+    </ul>
+
+    <a href="/images/yo.jpg" download>
+      <img 
+        src="/images/yo.jpg" 
+        alt="Una fotografia de Yeison de presentación" 
+        title="Foto de yeison" 
+        width="250"
+        height="250" 
+        id="photo-image" 
+        hidden
+        loading="lazy"
+      >
+    </a>
+
+
+    <h2 id="proyectos">Proyectos realizados</h2>
+
+    <aside>
+      <header>
+        <h3>Mis tecnologías favoritas</span>
+      </header>
+      <ol  type="1" reversed start="10">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+        <li>Node.JS</li>
+      </ol>
+    </aside>
+
+    <section>
+      <article>
+        <header>
+          <h4>Google</h4>
+        </header>
+        <img src="/images/google.png" alt="Pagina inicial de Google" loading="lazy" style="width: 100%; aspect-ratio: 108/59;" >
+        <p>
+          Google me contacto y cree la pagina inicial del navegador
+        </p>
+        <footer>
+          <small>Tecnologias usadas: HTML, CSS, Javascript</small>
+        </footer>
+      </article>
+      <article>
+        <header>
+          <h4>Aplicación Web E-commerce</h4>
+        </header>
+        <p>
+          Creación de una plataforma de comercio electrónico para una tienda local
+        </p>
+        <small>Tecnologias usadas: React, Node.JS, MongoDB</small>
+      </article>
+      <article>
+        <header>
+          <h4>Aplicación Web E-commerce</h4>
+        </header>
+        <p>
+          Creación de una plataforma de comercio electrónico para una tienda local
+        </p>
+        <small>Tecnologias usadas: React, Node.JS, MongoDB</small>
+      </article>
+    </section>
+
+    <section>
+      <h2>Preguntas frecuentes</h2>
+
+      <details>
+        <summary>¿Que estudios tienes?</summary>
+        <p>Estudie de manera autodidacta desde los 16 años desarrollo</p>
+      </details>
+
+    </section>
+
+    <section>
+      <h4>Formulario de contacto</h4>
+
+      <form method="post" action="/">
+        <fieldset>
+          <legend>Información personal</legend>
+          
+          <div>
+            <label for="name">Nombre:</label>
+            <input type="text" name="name" id="name" placeholder="Nombre" required>
+          </div>
+          <div>
+            <label>Nombre:</label>
+            <input type="email" name="email" id="email" placeholder="a@a.com" required>
+          </div>
+        </fieldset>
+        <fieldset>
+          <legend>Información adicional</legend>
+          <div>
+            <label for="phone">Nombre:</label>
+            <input type="tel" name="phone" id="phone" placeholder="0000000" required>
+          </div>
+        </fieldset>
+
+        <fieldset>
+          <legend>Otros</legend>
+          <div>
+            <label for="why">Por que me quieres contactar</label>
+            <select name="why" id="why">
+              <option value="1">Trabajo</option>
+              <option value="2">Duda</option>
+              <option value="3">Mas información</option>
+            </select>
+          </div>
+
+          <div>
+            <label for="terms">Acepta los terminos</label>
+            <input type="checkbox" id="terms" name="terms" required>
+          </div>
+
+          <div>
+            <datalist id="languages">
+              <option value="Javascript"></option>
+              <option value="Python"></option>
+              <option value="Java"></option>
+              <option value="C#"></option>
+            </datalist>
+            <label>Con que lenguaje quieres ayuda?</label>
+            <input list="languages" name="languages">
+          </div>
+        </fieldset>
+
+        <button>Enviar</button>
+      </form>
+
+    </section>
+
+  </main>
+
+  <footer>
+    Copyright © 2024 - El Portfolio mas bello del mundo
+
+    <a href="mailto:yeisonhenaoo@gmail.com">Enviame un correo</a>
+    <a href="tel: +57 3000000000">Llamar por telefono</a>
+    <a href="whatsapp://send?text=Hola yeison"></a>
+  </footer>
 
 </body>
 
